@@ -17,7 +17,7 @@ local $ENV{NPG_WEBSERVICE_CACHE_DIR} = q(t/data/samplesheet);
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7826, output=>\$result); } 'sample sheet object for dual index';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7826, output=>\$result); } 'sample sheet object for dual index';
   my $expected_result = << 'RESULT_7826';
 [Header],,,,
 Investigator Name,nh4,,,
@@ -52,7 +52,7 @@ RESULT_7826
 {
   my $ss;
   my $result = q();
-  dies_ok { $ss = npg::samplesheet->new(output=>\$result)->process; } 'sample sheet process fails when no run object nor id_run given';
+  dies_ok { $ss = npg::samplesheet->new( repository=>q(t/data/repos1), output=>\$result)->process; } 'sample sheet process fails when no run object nor id_run given';
 }
 
 my $expected_result_7007 = << 'RESULT_7007';
@@ -80,7 +80,7 @@ $expected_result_7007 =~ s/\n/\r\n/smg;
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7007, output=>\$result); } 'sample sheet object for unplexed paired run';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7007, output=>\$result); } 'sample sheet object for unplexed paired run';
   lives_ok { $ss->process(); } ' sample sheet generated';
   is_string($result, $expected_result_7007);
 }
@@ -88,7 +88,7 @@ $expected_result_7007 =~ s/\n/\r\n/smg;
   my $run = $schema->resultset(q(Run))->find(7007);
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(run=>$run, output=>\$result); } 'sample sheet object from run object - no id_run given';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), run=>$run, output=>\$result); } 'sample sheet object from run object - no id_run given';
   lives_ok { $ss->process(); } ' sample sheet generated';
   is_string($result, $expected_result_7007);
 }
@@ -96,12 +96,12 @@ $expected_result_7007 =~ s/\n/\r\n/smg;
 
 {
   my $ss;
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7007); } 'sample sheet object - no output provided';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7007); } 'sample sheet object - no output provided';
   cmp_ok($ss->output, 'eq', '/nfs/sf49/ILorHSorMS_sf49/samplesheets/wibble/MS0001309-300.csv', 'default output location (with zeroes trimmed appropriately)');
 }
 {
   my $ss;
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7007); } 'sample sheet object - no output provided';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7007); } 'sample sheet object - no output provided';
   my $orig_flowcell_id = $ss->run->flowcell_id;
   $ss->run->flowcell_id(q(MS2000132-500V2));
   cmp_ok($ss->output, 'eq', '/nfs/sf49/ILorHSorMS_sf49/samplesheets/wibble/MS2000132-500V2.csv', 'default output location copes with V2 MiSeq cartirdges/reagent kits');
@@ -110,7 +110,7 @@ $expected_result_7007 =~ s/\n/\r\n/smg;
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946, output=>\$result); } 'sample sheet object for plexed paired run';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946, output=>\$result); } 'sample sheet object for plexed paired run';
   my $expected_result = << 'RESULT_6946';
 [Header],,,,
 Investigator Name,mq1,,,
@@ -149,13 +149,13 @@ RESULT_6946
 }
 {
   my $ss;
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946); } 'sample sheet object - no output provided';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946); } 'sample sheet object - no output provided';
   cmp_ok($ss->output, 'eq', '/nfs/sf49/ILorHSorMS_sf49/samplesheets/wibble/000000000-A0616.csv', 'default output location')
 }
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7825, output=>\$result); } 'sample sheet object for plexed paired run';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7825, output=>\$result); } 'sample sheet object for plexed paired run';
   my $expected_result = << 'RESULT_7825';
 [Header],,,,
 Investigator Name,nh4,,,
@@ -203,14 +203,14 @@ RESULT_7825
   is (npg::samplesheet::_csv_compatible_value(['d@sea', 'r@see']), 'd@sea r@see', 'value conversion: array concatenated');
   is (npg::samplesheet::_csv_compatible_value({'middle' => 250, 'from' => 200, 'to' => 300,}),
     'from:200 middle:250 to:300', 'value conversion: hash stringified');
-  my $v = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>7007);
+  my $v = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>7007);
   throws_ok {npg::samplesheet::_csv_compatible_value($v)} qr/Do not know how to serialize/, 'error converting an object';
 }
 
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, extend => 1, id_run=>7007, output=>\$result); } 'extended sample sheet object for unplexed paired run';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, extend => 1, id_run=>7007, output=>\$result); } 'extended sample sheet object for unplexed paired run';
   lives_ok { $ss->process(); } ' sample sheet generated';
   is_string($result, read_file('t/data/samplesheet/7007_extended.csv'));
 }
@@ -218,7 +218,7 @@ RESULT_7825
 {
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); } 'extended sample sheet object for plexed paired run';
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); } 'extended sample sheet object for plexed paired run';
   lives_ok { $ss->process(); } ' sample sheet generated';
   is_string($result, read_file('t/data/samplesheet/6946_extended.csv'));
 }
@@ -230,7 +230,7 @@ RESULT_7825
 
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
     'extended sample sheet object for unplexed paired 8 lane run with a control lane';
   lives_ok { $ss->process(); } 'sample sheet generated';
   is_string($result, read_file('t/data/samplesheet/1control7libs_extended.csv'));
@@ -243,7 +243,7 @@ RESULT_7825
 
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
     'extended sample sheet object for plexed paired 8 lane run';
   lives_ok { $ss->process(); } 'sample sheet generated';
   is_string($result, read_file('t/data/samplesheet/8pools_extended.csv'));
@@ -257,7 +257,7 @@ RESULT_7825
 
   my $ss;
   my $result = q();
-  lives_ok { $ss = npg::samplesheet->new(npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
+  lives_ok { $ss = npg::samplesheet->new(repository=>q(t/data/repos1), npg_tracking_schema=>$schema, id_run=>6946, extend => 1, output=>\$result); }
     'extended sample sheet object for plexed paired run with both pool and library lanes';
   lives_ok { $ss->process(); } 'sample sheet generated';
   is_string($result, read_file('t/data/samplesheet/4pool4libs_extended.csv'));
