@@ -1,5 +1,7 @@
 CHANGES
 
+ - ensure samplesheet testing works without WTSI filessystem
+
 release 77.6
  - added code to generate HiSeqX runfolder names
  - updated list of directories to search for cycle sub-directories
